Swap out Olga for Simon

--- a/symposium/cogsci_conventionsSymposium.tex
+++ b/symposium/cogsci_conventionsSymposium.tex
@@ -58,8 +58,8 @@
 {\large \bf Robert X.~D.~Hawkins (rxdh@stanford.edu)} \\ 
 {\large \bf Noah D.~Goodman (ngoodman@stanford.edu)}\\
   Stanford University \\
-{\large \bf Simon Kirby (simon.kirby@ed.ac.uk)} \\
-{\large \bf Kenny Smith (kenny.smith@ed.ac.uk)} \\
+  {\large \bf Kenny Smith (kenny.smith@ed.ac.uk)} \\
+{\large \bf Olga Feh\'er (olga.feher@ed.ac.uk)} \\
   University of Edinburgh \\
 {\large \bf Robert Goldstone (rgoldsto@indiana.edu)}\\
   Indiana University\\  
@@ -89,7 +89,7 @@ We will close with a panel discussion on some of these issues, led by Noah Goodm
 
 %Many of us are interested specifically in how conventions have arisen in language, from the long-term evolution of linguistic structure down to the choice of referent in real-time communication. Iterated learning paradigms allow us to simulate more general cultural transmission processes in the lab, showing the effects of cognitive biases on convention-formation. And work in the collective behavior literature has demonstrated how groups of agents can coordinate on emergent patterns of behavior in the absence of explicit communication. 
 \begin{center}\textbf{Compression and communication in the cultural evolution of linguistic structure}\end{center}
-\begin{center}\emph{Simon Kirby \& Kenny Smith}\end{center}
+\begin{center}\emph{Kenny Smith, Olga Feh\'er, \& Kenny Smith (Co-author)}\end{center}
 
 Language exhibits striking systematic structure. Words are composed of combinations of reusable sounds, and those words in turn are combined to form complex sentences. These properties make language unique among natural communication systems and enable our species to convey an open-ended set of messages.  We provide a cultural evolutionary account of the origins of this structure. We show, using simulations of rational learners and laboratory experiments, that structure arises from a trade-off between pressures for compressibility (imposed during learning) and expressivity (imposed during communication). We further demonstrate that the relative strength of these two pressures can be varied in different social contexts, leading to novel predictions about the emergence of structured behaviour in the wild.
 
