--- a/symposium/cogsci_conventionsSymposium.tex
+++ b/symposium/cogsci_conventionsSymposium.tex
@@ -61,7 +61,7 @@
   {\large \bf Kenny Smith (kenny.smith@ed.ac.uk)} \\
 {\large \bf Olga Feh\'er (olga.feher@ed.ac.uk)} \\
   University of Edinburgh \\
-{\large \bf Robert Goldstone (rgoldsto@indiana.edu)}\\
+{\large \bf Robert L. Goldstone (rgoldsto@indiana.edu)}\\
   Indiana University\\  
 {\large \bf Tom Griffiths (tom\_griffiths@berkeley.edu)}\\
 University of California, Berkeley}
@@ -89,12 +89,12 @@ We will close with a panel discussion on some of these issues, led by Noah Goodm
 
 %Many of us are interested specifically in how conventions have arisen in language, from the long-term evolution of linguistic structure down to the choice of referent in real-time communication. Iterated learning paradigms allow us to simulate more general cultural transmission processes in the lab, showing the effects of cognitive biases on convention-formation. And work in the collective behavior literature has demonstrated how groups of agents can coordinate on emergent patterns of behavior in the absence of explicit communication. 
 \begin{center}\textbf{Compression and communication in the cultural evolution of linguistic structure}\end{center}
-\begin{center}\emph{Kenny Smith, Olga Feh\'er, \& Kenny Smith (Co-author)}\end{center}
+\begin{center}\emph{Kenny Smith, Olga Feh\'er, \& Simon Kirby (Co-author)}\end{center}
 
 Language exhibits striking systematic structure. Words are composed of combinations of reusable sounds, and those words in turn are combined to form complex sentences. These properties make language unique among natural communication systems and enable our species to convey an open-ended set of messages.  We provide a cultural evolutionary account of the origins of this structure. We show, using simulations of rational learners and laboratory experiments, that structure arises from a trade-off between pressures for compressibility (imposed during learning) and expressivity (imposed during communication). We further demonstrate that the relative strength of these two pressures can be varied in different social contexts, leading to novel predictions about the emergence of structured behaviour in the wild.
 
 \begin{center}\textbf{Adaptive group coordination and role differentiation}\end{center}
-\begin{center}\emph{Robert Goldstone \& Michael E. Roberts (Co-author)}\end{center}
+\begin{center}\emph{Robert L. Goldstone \& Michael E. Roberts (Co-author)}\end{center}
 
 Many real world situations (potluck dinners, academic departments, sports teams, corporate divisions, committees, seminar classes, etc.) involve actors adjusting their contributions in order to achieve a mutually satisfactory group goal, a win-win result.  However, the majority of human group research has involved situations where groups perform poorly because task constraints promote either individual maximization behavior or diffusion of responsibility, and even successful tasks generally involve the propagation of one correct solution through a group.  
 
@@ -105,11 +105,12 @@ Our empirical results provide evidence for adaptive coordination in human groups
 \begin{center}\textbf{The emergence of conventions in real-time environments}\end{center}
 \begin{center}\emph{Robert Hawkins}\end{center}
 
-Why are some behaviors governed by strong social conventions while others are not? We experimentally investigate two factors contributing to the formation of conventions in a game of impure coordination: the continuity of interaction within each round of play (simultaneous vs. dynamic) and the stakes of the interaction (high vs. low differences between payoffs). To maximize efficiency and fairness in this game, players must coordinate on one of two equally advantageous equilibria. In agreement with other studies manipulating continuity of interaction, we find that players who were allowed to interact continuously within rounds achieved outcomes with greater efficiency and fairness than players who were forced to make simultaneous decisions. 
+Why are some behaviors governed by strong social conventions while others are not? I will present data from real-time, multi-player experiments that explore factors involved in synchronic convention-formation across two domains: behavioral game theory and language understanding. 
 
-However, the stability of equilibria in the real-time condition varied systematically and dramatically with stakes: players converged on more stable patterns of behavior when stakes are high. To account for this result, we present a novel analysis of the dynamics of continuous interaction and signaling within rounds. We discuss this previously unconsidered interaction between within-trial and across-trial dynamics as a form of social canalization. When stakes are low in a real-time environment, players can satisfactorily coordinate `on the fly,' but when stakes are high there is increased pressure to establish and adhere to shared expectations that persist across rounds. 
-\vspace{1cm}
+In the first domain, we manipulated two factors in a game of impure coordination: the continuity of interaction within each round of play and the stakes of the interaction. To maximize efficiency and fairness in this game, players must coordinate on one of two equally advantageous equilibria. We found that when stakes are low in a real-time environment, players can satisfactorily coordinate `on the fly,' but when stakes are high, or information is scarce, there is increased pressure to establish and adhere to shared expectations that persist across rounds. 
 
+Second, we ran a series of closed group, natural language communication games where the speaker produces a referring expression to help the listener select a target stimulus from a set of three. The stimuli we used -- colors, random splines, and tangrams -- varied in the extent to which prior conventions exist, context is salient, and specific stimuli persist across the discourse environment. Exploratory analyses of these data begin to characterize the domain-general space of features that govern the emergence of local conventions.
+\vspace{2cm}
 
 \begin{center}\textbf{Effects of inductive biases in iterated learning and coordination}\end{center}
 \begin{center}\emph{Tom Griffiths}\end{center}
